objects/Contract_Review__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_Date_by_Attorney__c</fullName>
        <label>Accepted Date by Attorney</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affiliate_agreement__c</fullName>
        <inlineHelpText>Have we confirmed that Copado does not have an agreement in place with an affiliate of this customer that can be leveraged for this agreement?</inlineHelpText>
        <label>Affiliate agreement for this customer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <inlineHelpText>What type of agreement is this?</inlineHelpText>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer MSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_come_in_and_Close__c</fullName>
        <inlineHelpText>When did the customer’s agreement come in and when did it close?</inlineHelpText>
        <label>Agreement come in and Close</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Any_other_circumstances__c</fullName>
        <inlineHelpText>Any other circumstances to note?</inlineHelpText>
        <label>Any other circumstances?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_AE_Name__c</fullName>
        <formula>Assigned_AE__r.FirstName &amp;&quot; &quot;&amp; Assigned_AE__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned AE Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned AE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copado_Approved_Partner__c</fullName>
        <description>Has our Partner Success team confirmed that the vendor is approved by our team?</description>
        <label>Copado Approved Partner?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Account_Name__c</fullName>
        <formula>Customer_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>What Customer account is this for?</inlineHelpText>
        <label>Customer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Prospect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Reviews</relationshipLabel>
        <relationshipName>Contract_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InfoSec_Team_Engaged__c</fullName>
        <inlineHelpText>Has the InfoSec team been engaged in this negotiation?</inlineHelpText>
        <label>InfoSec Team Engaged?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kyles_Team_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kyle&apos;s Team Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_FAQ_Talking_Sent__c</fullName>
        <inlineHelpText>Have you sent them our Legal FAQ doc and/or our Legal talking points via email?</inlineHelpText>
        <label>Legal FAQ/Talking Sent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mark_Desrosiers_Approved_The_Request__c</fullName>
        <inlineHelpText>Has Mark Desrosiers approved the request to start with their template?</inlineHelpText>
        <label>Mark Desrosiers Approved The Request?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Customer_calls_required__c</fullName>
        <inlineHelpText>How many phone calls did this require with the customer’s team?</inlineHelpText>
        <label>Number of Customer calls required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_redlines_in_round__c</fullName>
        <inlineHelpText>How many rounds of redlines did this require?</inlineHelpText>
        <label>Number of redlines in round</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Special_Consideration__c</fullName>
        <inlineHelpText>Are there other special considerations to keep in mind for this contract review?</inlineHelpText>
        <label>Other Special Consideration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ready_to_be_sent_to_the_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to be sent to the Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Professional_Services__c</fullName>
        <inlineHelpText>Will the customer require professional services from Copado?</inlineHelpText>
        <label>Require Professional Services?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rob_Canfield_s_Team_Engaged__c</fullName>
        <inlineHelpText>Has Copado&apos;s Professional Services team been engaged?</inlineHelpText>
        <label>Copado&apos;s Professional Services  Engaged?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Robs_Team_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rob&apos;s Team Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLA_Business_Days__c</fullName>
        <formula>(5 * ( FLOOR( ( SLA_Date_for_Attorney__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
SLA_Date_for_Attorney__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( (  Today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
 Today() - DATE( 1900, 1, 8), 7 ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Business Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Date_for_Attorney__c</fullName>
        <formula>CASE(
MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 
0, CreatedDate+15,
1, CreatedDate+13, 
2, CreatedDate+13,
3, CreatedDate+14, 
4, CreatedDate+14, 
5, CreatedDate+14, 
6, CreatedDate+14,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Date for Attorney</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready For Customer</fullName>
                </value>
                <value>
                    <fullName>Executed &amp; Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Talked_With_Customer_Lawyer__c</fullName>
        <inlineHelpText>Have you asked for their lawyer to speak with our lawyer about why we should start with our template?</inlineHelpText>
        <label>Talked With Customer Lawyer?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_AE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contract_Review_Attorney_Contract_Review</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Review Attorney</label>
        <queue>Contract_Review_Attorney</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contract_Review_Attorney_Queue_Contract_Review</fullName>
        <columns>NAME</columns>
        <columns>Customer_Account__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_AE__c</columns>
        <filterScope>Queue</filterScope>
        <label>Contract Review Attorney</label>
        <language>en_US</language>
        <queue>Contract_Review_Attorney</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_MSA_Agreement</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_AE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agreement_Type__c</field>
            <operation>equals</operation>
            <value>Customer MSA</value>
        </filters>
        <label>Customer MSA Agreement</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Contract Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Reviews</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Contract_Review_Lawyer_fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND (  NOT(Ready_to_be_sent_to_the_Customer__c),(OR(ISCHANGED( Agreement_come_in_and_Close__c ),  ISCHANGED( Number_of_redlines_in_round__c ),  ISCHANGED( Number_of_Customer_calls_required__c ),  ISCHANGED( Any_other_circumstances__c ))))</errorConditionFormula>
        <errorMessage>Cannot fill these fields without closing the Contract Review</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Copado_Approved_Partner</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Agreement_Type__c , &apos;Customer MSA&apos;),
(ISPICKVAL(Require_Professional_Services__c, &apos;No&apos;)),
ISBLANK(TEXT( Copado_Approved_Partner__c )))</errorConditionFormula>
        <errorMessage>Please fill if you have a Copado Approved Partner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lawyer_Contact_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Agreement_Type__c , &apos;Customer MSA&apos;),
ISBLANK(TEXT( Talked_With_Customer_Lawyer__c )))</errorConditionFormula>
        <errorMessage>Please fill if you contacted the Customer&apos;s Lawyer or not?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Legal_FAQ_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Agreement_Type__c , &apos;Customer MSA&apos;),
ISBLANK(TEXT( Legal_FAQ_Talking_Sent__c )))</errorConditionFormula>
        <errorMessage>Please fill Legal FAQ/ Talking is sent?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mark_Desrosiers_Approved_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Agreement_Type__c , &apos;Customer MSA&apos;),
ISBLANK(TEXT( Mark_Desrosiers_Approved_The_Request__c )))</errorConditionFormula>
        <errorMessage>Please fill if Mark Desrosiers Approved or not?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Professional_Services</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Agreement_Type__c , &apos;Customer MSA&apos;),
ISBLANK(TEXT(Require_Professional_Services__c)))</errorConditionFormula>
        <errorDisplayField>Accepted_Date_by_Attorney__c</errorDisplayField>
        <errorMessage>Please fill if you need professional services</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rob_Canfields_team_engaged</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Agreement_Type__c , &apos;Customer MSA&apos;),
(ISPICKVAL(Require_Professional_Services__c, &apos;Yes&apos;)),
ISBLANK(TEXT(Rob_Canfield_s_Team_Engaged__c)))</errorConditionFormula>
        <errorMessage>Please fill if Rob Canfield&apos;s Team is engaged</errorMessage>
    </validationRules>
</CustomObject>